# cortex

./: .gitignore  AGENTS.md  README.md  pyproject.toml  start.sh
backend/cortex/: auth.py  db.py  errors.py  main.py  mcp_server.py  migrations.py  models.py  statuses.py
backend/cortex/routers/: auth.py  comments.py  images.py  notifications.py  projects.py  search.py  spaces.py  sprints.py  statuses.py  tasks.py  users.py
backend/cortex/services/: activity.py  comments.py  images.py  notifications.py  projects.py  search.py  spaces.py  sprints.py  statuses.py  tasks.py  users.py
backend/tests/: conftest.py  test_auth.py  test_db.py  test_domain.py  test_events.py  test_images.py  test_mcp.py
frontend/: index.html  package-lock.json  package.json  tsconfig.app.json  vite.config.ts
frontend/src/: index.css  main.tsx
frontend/src/api/: client.ts  hooks.ts  types.ts
frontend/src/components/: Feed.tsx  Markdown.tsx  MarkdownEditor.tsx  NotificationBell.tsx  SearchPalette.tsx  Shell.tsx  TaskBits.tsx  filters.tsx  statuses.tsx  tags.tsx  ui.tsx
frontend/src/components/cm/: CodeEditor.tsx  livePreview.ts
frontend/src/components/ui/: button.tsx  input.tsx  select.tsx  textarea.tsx
frontend/src/lib/: lightbox.ts  theme.ts  utils.ts
frontend/src/pages/: Account.tsx  Admin.tsx  Backlog.tsx  Board.tsx  Home.tsx  Login.tsx  Project.tsx  Projects.tsx  Sprints.tsx  Task.tsx
scripts/: mcp_check.py  seed.py  smoke.sh
