[project]
name = "cortex"
version = "0.1.0"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.139.0",
    "mcp>=1.28.1",
    "pydantic>=2.13.4",
    "python-multipart>=0.0.32",
    "uvicorn[standard]>=0.50.2",
]

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "pytest>=9.1.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["backend/cortex"]

[tool.pytest.ini_options]
testpaths = ["backend/tests"]
